# hendrikmakait.github.io

./: .buildinfo  .pre-commit-config.yaml  CNAME  README.html  about.html  about.md  blog.html  conf.py  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js  talks.md
.github/workflows/: deploy.yml
_sources/: README.md.txt
_sources/blog/: personalization-vs-filter-bubble.md.txt
_static/: custom.css
_templates/: hello.html
blog/: 2018.html  archive.html  atom.xml  author.html  dask-demo-day-2023-03-talk.md  dask-upstream-performance-tests.md  drafts.html  observability-with-dask.md  pangeo-showcase-2025-04-talk.md  personalization-vs-filter-bubble.html  personalization-vs-filter-bubble.md  pycon-de-2023-talk.md  pydata-global-2024-talk.md  pydata-london-2024-talk.md  pydata-paris-2024-talk.md  shuffling-large-data-at-constant-memory.md  sigmod-src-2020-talk.md  tag.html
blog/author/: hendrik-makait.html
blog/tag/: essay.html  filter-bubble.html  personalization.html
