[tool.poetry]
name = "hendrikmakait-github-io"
version = "0.1.0"
description = "Professional website of Hendrik Makait"
authors = ["Hendrik Makait <hendrik@makait.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ablog = "^0.11.6"
myst-parser = "^2.0.0"
poethepoet = "^0.23.0"
pydata-sphinx-theme = "^0.14.1"
sphinx = "^7.2.6"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.5.0"
sphinxext-opengraph = "^0.8.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
sphinx-autobuild = "^2021.3.14"

[tool.poe.tasks]
autobuild = "sphinx-autobuild --ignore _build -b dirhtml  . _build/dirhtml/"
build = "sphinx-build -M html . _build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
