[project]
name = "hendrikmakait-github-io"
version = "0.1.0"
description = "Professional website of Hendrik Makait"
readme = "README.md"
authors = [
    {name = "Hendrik Makait", email = "hendrik@makait.com"},
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "ablog<1.0.0,>=0.11.6",
    "myst-parser<5.0.0,>=4.0.0",
    "poethepoet<1.0.0,>=0.23.0",
    "pydata-sphinx-theme<1.0.0,>=0.14.1",
    "sphinx<8.0.0,>=7.2.6",
    "sphinx-copybutton<1.0.0,>=0.5.2",
    "sphinx-design<1.0.0,>=0.5.0",
    "sphinx-iframes>=1.0.6",
    "sphinxext-opengraph<1.0.0,>=0.8.2",
]

[dependency-groups]
dev = [
    "pre-commit<4.0.0,>=3.4.0",
    "sphinx-autobuild<2022.0.0,>=2021.3.14",
]

[tool.poe.tasks]
autobuild = "sphinx-autobuild --ignore _build -b dirhtml  . _build/dirhtml/"
build = "sphinx-build -M html . _build"
